Activity List - Monitoring designs

--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -30,7 +30,7 @@
     
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Check your business details and contact details</div>
+          <div>Check your business and contact details</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -80,7 +80,7 @@
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>Check your business details and contact details</div>
+        <div>Check your business and contact details</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
         Cannot start yet
@@ -130,7 +130,7 @@
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>Check your business details and contact details</div>
+        <div>Check your business and contact details</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
         Cannot start yet
@@ -227,7 +227,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business details and contact details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and contact details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--light-blue">
@@ -276,7 +276,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business details and contact details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and contact details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -325,7 +325,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business details and contact details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and contact details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -372,7 +372,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business details and contact details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and contact details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -428,7 +428,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business details and contact details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and contact details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
