--- a/app/views/ftf/_includes/activity-list_status-block.html
+++ b/app/views/ftf/_includes/activity-list_status-block.html
@@ -90,4 +90,40 @@
     Your claim is due by 11:59pm on <strong>31 November 2025</strong>.
 </div>
 
+
+{% elif (data['status'] == "07a") %}
+
+<h3 class="govuk-heading-m">You can submit your year 1 reporting</h3>
+<div class="govuk-inset-text">
+    Your reporting is due by 11:59pm on <strong>31 November 2026</strong>.
+</div>
+
+{% elif (data['status'] == "07b") %}
+
+<h3 class="govuk-heading-m">You can submit your year 2 reporting</h3>
+<div class="govuk-inset-text">
+    Your reporting is due by 11:59pm on <strong>31 November 2027</strong>.
+</div>
+
+{% elif (data['status'] == "07c") %}
+
+<h3 class="govuk-heading-m">You can submit your year 3 reporting</h3>
+<div class="govuk-inset-text">
+    Your reporting is due by 11:59pm on <strong>31 November 2028</strong>.
+</div>
+
+{% elif (data['status'] == "07d") %}
+
+<h3 class="govuk-heading-m">You can submit your year 4 reporting</h3>
+<div class="govuk-inset-text">
+    Your reporting is due by 11:59pm on <strong>31 November 2029</strong>.
+</div>
+
+{% elif (data['status'] == "07e") %}
+
+<h3 class="govuk-heading-m">You can submit your year 5 reporting</h3>
+<div class="govuk-inset-text">
+    Your reporting is due by 11:59pm on <strong>31 November 2030</strong>.
+</div>
+
 {% endif %}
