--- a/app/views/ftf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/ftf/_includes/activity-list_task-section_agreement.html
@@ -1,6 +1,6 @@
 <li>
 
-    {% if (data['agree'] == "01") %}
+    {% if (data['agree'] == "01") %}  <!-- Agreement Scenario 1 -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -10,7 +10,7 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Read agreement</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-1-status">
           Cannot start yet
         </div>
       </li>
@@ -19,7 +19,7 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Read terms and conditions</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-2-status">
           Cannot start yet
         </div>
       </li>
@@ -28,13 +28,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Sign and accept agreement</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['agree'] == "02a") %}
+    {% elif (data['agree'] == "02a") %}  <!-- Agreement Scenario 2a -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -42,9 +42,9 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-1-status">Read agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-1-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -53,9 +53,9 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -66,13 +66,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Sign and accept agreement</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['agree'] == "02b") %}
+    {% elif (data['agree'] == "02b") %}  <!-- Agreement Scenario 2b -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -80,18 +80,18 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-1-status">Read agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-1-status">
           Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -102,13 +102,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Sign and accept agreement</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['agree'] == "02c") %}
+    {% elif (data['agree'] == "02c") %}  <!-- Agreement Scenario 2c -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -116,18 +116,18 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-1-status">Read agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-1-status">
           Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--light-blue">
             In progress
           </strong>
@@ -138,13 +138,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Sign and accept agreement</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="agreement-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['agree'] == "02d") %}
+    {% elif (data['agree'] == "02d") %}  <!-- Agreement Scenario 2d -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -154,25 +154,25 @@
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-1-status">
           Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-2-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-3-status">Sign and accept agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-3-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -180,7 +180,7 @@
       </li>
     </ul>
 
-    {% elif (data['agree'] == "03") %}
+    {% elif (data['agree'] == "03") %}  <!-- Agreement Scenario 3 -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
@@ -190,25 +190,25 @@
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-1-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-2-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-3-status">Sign and accept agreement</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="agreement-3-status">
             Completed
         </div>
       </li>
