--- a/app/views/ftf/_includes/activity-list_task-section_claim-01.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-01.html
@@ -1,6 +1,6 @@
 <li>
 
-    {% if (data['claim-01'] == "01") %}
+    {% if (data['claim-01'] == "01") %}  <!-- Claim 01 Scenario 1 -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -10,7 +10,7 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Download claim form</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-1-status">
           Cannot start yet
         </div>
       </li>
@@ -19,7 +19,7 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Upload claim form and evidence</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-2-status">
           Cannot start yet
         </div>
       </li>
@@ -28,13 +28,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Submit claim</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['claim-01'] == "02a") %}
+    {% elif (data['claim-01'] == "02a") %}  <!-- Claim 01 Scenario 2a -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -42,9 +42,9 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-1-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -55,7 +55,7 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Upload claim form and evidence</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-2-status">
           Cannot start yet
         </div>
       </li>
@@ -64,13 +64,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Submit claim</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['claim-01'] == "02b") %}
+    {% elif (data['claim-01'] == "02b") %}  <!-- Claim 01 Scenario 2b -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -78,18 +78,18 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-1-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-2-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -100,13 +100,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Submit claim</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['claim-01'] == "02c") %}
+    {% elif (data['claim-01'] == "02c") %}  <!-- Claim 01 Scenario 2c -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -114,18 +114,18 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-1-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-2-status">
           <strong class="govuk-tag govuk-tag--light-blue">
             In progress
           </strong>
@@ -136,13 +136,13 @@
         <div class="govuk-task-list__name-and-hint">
           <div>Submit claim</div>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-01-3-status">
           Cannot start yet
         </div>
       </li>
     </ul>
 
-    {% elif (data['claim-01'] == "02d") %}
+    {% elif (data['claim-01'] == "02d") %}  <!-- Claim 01 Scenario 2d -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -150,27 +150,27 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-1-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-2-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-3-status">Submit claim</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-3-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not started yet
           </strong>
@@ -178,7 +178,7 @@
       </li>
     </ul>    
 
-    {% elif (data['claim-01'] == "03") %}
+    {% elif (data['claim-01'] == "03") %}  <!-- Claim 01 Scenario 3 -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
     </h2>
@@ -186,27 +186,27 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-1-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-2-status">
             Completed
         </div>
       </li>
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-3-status">Submit claim</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="claim-01-3-status">
             Completed
         </div>
       </li>
