--- a/app/views/ftf/_includes/activity-list_task-section_claim-03.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-03.html
@@ -1,16 +1,16 @@
 <li>
+
+  {% if (data['claim-03'] == "01") %}  <!-- Claim 03 Scenario 1 -->
   <h2 class="govuk-prototype-kit-task-list__section">
     <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
   </h2>
-
-
-  {% if (data['claim-03'] == "01") %} 
+  
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
         <div>Download claim form</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-1-status">
         Cannot start yet
       </div>
     </li>
@@ -19,7 +19,7 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Upload claim form and evidence</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-2-status">
         Cannot start yet
       </div>
     </li>
@@ -28,19 +28,23 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Submit claim</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-3-status">
         Cannot start yet
       </div>
     </li>
   </ul>
 
-  {% elif (data['claim-03'] == "02a") %}
+  {% elif (data['claim-03'] == "02a") %}  <!-- Claim 03 Scenario 2a -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
+
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-1-status">Download claim form</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-1-status">
         <strong class="govuk-tag govuk-tag--blue">
           Not started yet
         </strong>
@@ -51,7 +55,7 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Upload claim form and evidence</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-2-status">
         Cannot start yet
       </div>
     </li>
@@ -60,28 +64,32 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Submit claim</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-3-status">
         Cannot start yet
       </div>
     </li>
   </ul>
 
-  {% elif (data['claim-03'] == "02b") %}
+  {% elif (data['claim-03'] == "02b") %}  <!-- Claim 03 Scenario 2b -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
+
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-1-status">Download claim form</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-1-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-2-status">Upload claim form and evidence</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-2-status">
         <strong class="govuk-tag govuk-tag--blue">
           Not started yet
         </strong>
@@ -92,28 +100,32 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Submit claim</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-3-status">
         Cannot start yet
       </div>
     </li>
   </ul>
 
-  {% elif (data['claim-03'] == "02c") %}
+  {% elif (data['claim-03'] == "02c") %}  <!-- Claim 03 Scenario 2c -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
+
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-1-status">Download claim form</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-1-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-2-status">Upload claim form and evidence</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-2-status">
         <strong class="govuk-tag govuk-tag--light-blue">
           In progress
         </strong>
@@ -124,69 +136,77 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Submit claim</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="claim-03-3-status">
         Cannot start yet
       </div>
     </li>
   </ul>
 
-  {% elif (data['claim-03'] == "02d") %}
+  {% elif (data['claim-03'] == "02d") %}  <!-- Claim 03 Scenario 2d -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
+
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-1-status">Download claim form</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-1-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-2-status">Upload claim form and evidence</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-2-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-3-status">Submit claim</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-3-status">
         <strong class="govuk-tag govuk-tag--blue">
           Not started yet
         </strong>
       </div>
     </li>
-  </ul>
+  </ul>    
 
-  {% elif (data['claim-03'] == "03") %}
+  {% elif (data['claim-03'] == "03") %}  <!-- Claim 03 Scenario 3 -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
+  
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-1-status">Download claim form</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-1-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-2-status">Upload claim form and evidence</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-2-status">
           Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-03-3-status">Submit claim</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="claim-03-3-status">
           Completed
       </div>
     </li>
