--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -8,17 +8,17 @@
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-1-status">
         Completed
       </div>
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-4-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-2-status">
         <strong class="govuk-tag govuk-tag--blue">
           Not yet started
         </strong>
@@ -28,7 +28,7 @@
       <div class="govuk-task-list__name-and-hint">
         <div>Register your interest</div>
       </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="expression-of-interest-3-status">
         Cannot start yet
       </div>
     </li>
@@ -42,17 +42,17 @@
   <ul class="govuk-task-list">
   <li class="govuk-task-list__item govuk-task-list__item--with-link">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
     </div>
-    <div class="govuk-task-list__status" id="application-details-1-status">
+    <div class="govuk-task-list__status" id="expression-of-interest-1-status">
       Completed
     </div>
   </li>
   <li class="govuk-task-list__item govuk-task-list__item--with-link">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
     </div>
-    <div class="govuk-task-list__status" id="application-details-4-status">
+    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
       <strong class="govuk-tag govuk-tag--light-blue">
         In progress
       </strong>
@@ -62,13 +62,13 @@
     <div class="govuk-task-list__name-and-hint">
       <div>Register your interest</div>
     </div>
-    <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+    <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="expression-of-interest-3-status">
       Cannot start yet
     </div>
   </li>
 </ul>
 
-      {% elif (data['eoi'] == "03a") %}  <!-- EOI Scenario 3 -->
+      {% elif (data['eoi'] == "03a") %}  <!-- EOI Scenario 3a -->
       <h2 class="govuk-prototype-kit-task-list__section">
         <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
       </h2>
@@ -76,31 +76,31 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-1-status">
           Completed
         </div>
       </li>
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-2-status">
           Completed
         </div>
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-3-status">
           Completed
         </div>
       </li>
     </ul>
 
-      {% elif (data['eoi'] == "03b") %}  <!-- EOI Scenario 4 -->
+      {% elif (data['eoi'] == "03b") %}  <!-- EOI Scenario 3b -->
       <h2 class="govuk-prototype-kit-task-list__section">
         <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
       </h2>
@@ -108,39 +108,39 @@
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-1-status">
           Completed
         </div>
       </li>
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-2-status">
           Completed
         </div>
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-3-status">
           Completed
         </div>
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Expression of interest outcome</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
         </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
+        <div class="govuk-task-list__status" id="expression-of-interest-4-status">
           Accepted
         </div>
       </li>
     </ul>
 
-    {% elif (data['eoi'] == "03c") %}
+    {% elif (data['eoi'] == "03c") %}  <!-- EOI Scenario 3c -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
     </h2>
@@ -148,33 +148,33 @@
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-1-status">
         Completed
       </div>
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-2-status">
         Completed
       </div>
     </li>
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-3-status">
         Completed
       </div>
     </li>
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Expression of interest outcome</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
       </div>
-      <div class="govuk-task-list__status" id="application-details-1-status">
+      <div class="govuk-task-list__status" id="expression-of-interest-4-status">
         Not accepted
       </div>
     </li>
