--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,87 +38,115 @@
     </ul>
 
 
-<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
+<hr id="high-fidelity-design" style="margin: 40px 0;">
 
 
     <h2 class="govuk-heading-l">High-fidelity design</h2>
 
-    <span class="content-section">    
-      <h3 class="govuk-heading-m">Activity List</h3>
+    <span class="content-section">  
+
+
+      <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
+                FTF activity list scenarios
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
+            <p class="govuk-body">EOI:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/activity-list/v3-0/index?status=01a&eoi=01&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI in progress</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=01b&eoi=03a&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI under review</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=01c&eoi=03c&apply=0&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">EOI not accepted</a></li>
+            </ul>
+    
+            <p class="govuk-body">Application:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/activity-list/v3-0/index?status=02a&eoi=03b&apply=02a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">You can start application (EOI accepted)</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=02b&eoi=03b&apply=02c&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application in progress</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application under review</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=02d&eoi=03b&apply=03c&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">Application unsuccessful</a></li>
+            </ul>
+    
+            <p class="govuk-body">Agreement:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0" target="_blank">Read and sign your grant funding agreement</a></li>
+            </ul>
+    
+            <p class="govuk-body">Claim:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02a&claim-02=01&claim-03=01" target="_blank">You can submit your first claim</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=05&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=02a&claim-03=01" target="_blank">You can submit your second claim</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=06&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=02a" target="_blank">You can submit your third claim</a></li>
+            </ul>
+    
+            <p class="govuk-body">Monitoring:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/activity-list/v3-0/index?status=07a&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=01" target="_blank">You can submit your year 1 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07b&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=01" target="_blank">You can submit your year 2 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07c&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=01" target="_blank">You can submit your year 3 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07d&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=01" target="_blank">You can submit your year 4 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07e&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=03&monitoring-05=01" target="_blank">You can submit your year 5 reporting</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
+                FTF outcome screens
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+            <p class="govuk-body">EOI:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/eoi/v2-0/outcome-accepted" target="_blank">EOI accepted</a></li>
+              <li><a href="/ftf/eoi/v2-0/outcome-not-accepted" target="_blank">EOI not accepted</a></li>
+            </ul>
+            <p class="govuk-body">Application:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/ftf/application/v3-0/outcome-successful" target="_blank">Application successful</a></li>
+              <li><a href="/ftf/application/v3-0/outcome-unsuccessful" target="_blank">Application unsuccessful</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
+                FETF activity list scenarios
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
+            <p class="govuk-body">Application:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=01a&fetf-apply=01&fetf-agree=01&fetf-claim=01" target="_blank">Application ready to start</a></li>
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=01b&fetf-apply=02a&fetf-agree=01&fetf-claim=01" target="_blank">Application in progress</a></li>
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=01c&fetf-apply=03a&fetf-agree=01&fetf-claim=01" target="_blank">Application under review</a></li>
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=01d&fetf-apply=03c&fetf-agree=0&fetf-claim=0" target="_blank">Application unsuccessful</a></li>
+            </ul>
+          
+            <p class="govuk-body">Agreement:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01" target="_blank">Read and sign your grant funding agreement</a></li>
+            </ul>
+          
+            <p class="govuk-body">Claim:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="/fetf/activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a" target="_blank">You can submit your claim</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
   
-  
-      <h4 class="govuk-heading-s">FTF scenarios</h4>
-      <p class="govuk-body">EOI phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/activity-list/v3-0/index?status=01a&eoi=01&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI in progress</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=01b&eoi=03a&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI under review</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=01c&eoi=03c&apply=0&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">EOI not accepted</a></li>
-        </ul>
-
-        <p class="govuk-body">Application phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/activity-list/v3-0/index?status=02a&eoi=03b&apply=02a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">You can start application (EOI accepted)</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=02b&eoi=03b&apply=02c&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application in progress</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application under review</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=02d&eoi=03b&apply=03c&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">Application unsuccessful</a></li>
-        </ul>
-
-        <p class="govuk-body">Agreement phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0" target="_blank">Read and sign your grant funding agreement</a></li>
-        </ul>
-
-        <p class="govuk-body">Claim phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02a&claim-02=01&claim-03=01" target="_blank">You can submit your first claim</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=05&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=02a&claim-03=01" target="_blank">You can submit your second claim</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=06&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=02a" target="_blank">You can submit your third claim</a></li>
-        </ul>
-
-        <br>
 
 
-        <h4 class="govuk-heading-s">FTF Outcome screens</h4>
-        <p class="govuk-body">EOI phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/eoi/v2-0/outcome-accepted" target="_blank">EOI accepted</a></li>
-          <li><a href="/ftf/eoi/v2-0/outcome-not-accepted" target="_blank">EOI not accepted</a></li>
-        </ul>
-        <p class="govuk-body">Application phase:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li><a href="/ftf/application/v3-0/outcome-successful" target="_blank">Application successful</a></li>
-          <li><a href="/ftf/application/v3-0/outcome-unsuccessful" target="_blank">Application unsuccessful</a></li>
-        </ul>
-
-  <br>
-
-  
-
-  <h4 class="govuk-heading-s">FETF scenarios</h4>
-
-  <p class="govuk-body">Application phase:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=01a&fetf-apply=01&fetf-agree=01&fetf-claim=01" target="_blank">Application ready to start</a></li>
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=01b&fetf-apply=02a&fetf-agree=01&fetf-claim=01" target="_blank">Application in progress</a></li>
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=01c&fetf-apply=03a&fetf-agree=01&fetf-claim=01" target="_blank">Application under review</a></li>
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=01d&fetf-apply=03c&fetf-agree=0&fetf-claim=0" target="_blank">Application unsuccessful</a></li>
-  </ul>
-
-  <p class="govuk-body">Agreement phase:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01" target="_blank">Read and sign your grant funding agreement</a></li>
-  </ul>
-
-  <p class="govuk-body">Claim phase:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li><a href="/fetf/activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a" target="_blank">You can submit your claim</a></li>
-  </ul>
-
-
-  <hr style="margin: 40px 0; width: 70%;">
-  
-  
-  
+  <hr style="margin: 40px 0;">
   
   
   </span>
@@ -142,7 +170,7 @@
 <br>
 
 
-<hr style="margin: 40px 0; width: 70%;">
+<hr style="margin: 40px 0;">
 
 
 
@@ -182,7 +210,7 @@
     </span>
 
 
-    <hr style="margin: 40px 0; width: 70%;">
+    <hr style="margin: 40px 0;">
 
 
 
@@ -226,7 +254,7 @@
 
 
 
-<hr style="margin: 40px 0; width: 70%;">
+<hr style="margin: 40px 0;">
 
 
 <h3 class="govuk-heading-m">Claim</h3>
@@ -259,7 +287,7 @@
 </p>
 
 
-<hr id="low-fidelity-design" style="margin: 40px 0; height: 3px;">
+<hr id="low-fidelity-design" style="margin: 40px 0;">
 
 <h2 class="govuk-heading-l">Low-fidelity design</h2>
 
@@ -269,7 +297,7 @@
 <p class="govuk-body">E2E flow diagram: <a href="https://app.mural.co/t/1010defra0589/m/1010defra0589/1682675098512/bad82167914a454cbcf8a9378b175be62b00ca51?wid=7-1682675140064" target="_blank">E2E flow v1.0 - Mural (opens in new tab)</a></p>
 </span>
 
-<hr id="service-design" style="margin: 40px 0; height: 3px;">
+<hr id="service-design" style="margin: 40px 0;">
 
 <h2 class="govuk-heading-l">Service design</h2>
 
