Activity List status content change

--- a/app/views/ftf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/ftf/_includes/activity-list_task-section_agreement.html
@@ -46,7 +46,7 @@
         </div>
         <div class="govuk-task-list__status" id="agreement-1-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
@@ -57,7 +57,7 @@
         </div>
         <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
@@ -93,7 +93,7 @@
         </div>
         <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
@@ -174,7 +174,7 @@
         </div>
         <div class="govuk-task-list__status" id="agreement-3-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
