--- a/app/views/ftf/_includes/activity-list_task-section_claim-03.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-03.html
@@ -46,7 +46,7 @@
       </div>
       <div class="govuk-task-list__status" id="claim-03-1-status">
         <strong class="govuk-tag govuk-tag--blue">
-          Not started yet
+          Not yet started
         </strong>
       </div>
     </li>
@@ -91,7 +91,7 @@
       </div>
       <div class="govuk-task-list__status" id="claim-03-2-status">
         <strong class="govuk-tag govuk-tag--blue">
-          Not started yet
+          Not yet started
         </strong>
       </div>
     </li>
@@ -172,7 +172,7 @@
       </div>
       <div class="govuk-task-list__status" id="claim-03-3-status">
         <strong class="govuk-tag govuk-tag--blue">
-          Not started yet
+          Not yet started
         </strong>
       </div>
     </li>
