--- a/app/views/ftf/_includes/activity-list_task-section_monitoring-05.html
+++ b/app/views/ftf/_includes/activity-list_task-section_monitoring-05.html
@@ -12,7 +12,7 @@
         </div>
         <div class="govuk-task-list__status" id="monitoring-05-1-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
@@ -78,7 +78,7 @@
         </div>
         <div class="govuk-task-list__status" id="monitoring-05-2-status">
           <strong class="govuk-tag govuk-tag--blue">
-            Not started yet
+            Not yet started
           </strong>
         </div>
       </li>
