--- a/app/views/fetf/_includes/activity-list_task-section_claim.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim.html
@@ -7,6 +7,19 @@
     </h2>
     
     <ul class="govuk-task-list">
+
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="claim-detail" aria-describedby="application-details-2-status">Check claim details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+        </div>
+      </li>
+
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <div>Upload claim evidence</div>
@@ -38,7 +51,17 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Upload claim evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check claim details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+      </li>
+
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="upload?01=n&02=n&03=n&04=n&05=n&06=n" aria-describedby="application-details-2-status">Upload claim evidence</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -69,6 +92,15 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check claim details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Upload claim evidence</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
@@ -97,6 +129,16 @@
     
     <ul class="govuk-task-list">
       
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check claim details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+      </li>
+
+
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Upload claim evidence</a>
@@ -130,6 +172,15 @@
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check claim details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Upload claim evidence</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
@@ -143,6 +194,17 @@
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
             Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Claim outcome</div>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--light-blue">
+            In progress
+          </strong>
         </div>
       </li>
 
