--- a/app/views/index.html
+++ b/app/views/index.html
@@ -260,6 +260,14 @@
 <h3 class="govuk-heading-m">Claim</h3>
 
 
+<h4 class="govuk-heading-s">User Research - Round 1 (TBC 2024)</h4>
+<p class="govuk-body">Prototype (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/fetf/claim/v1-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=01" target="_blank">FETF Claim v1 (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
+
 <h4 class="govuk-heading-s">User Research - Round 3 (December 2023)</h4>
 <p class="govuk-body">Prototype (Heroku):<br>
   <ul class="govuk-list govuk-list--bullet">
