Content adjustments FETF Claim

--- a/app/views/fetf/_includes/activity-list_status-block.html
+++ b/app/views/fetf/_includes/activity-list_status-block.html
@@ -49,5 +49,12 @@
     Your claim is due by 11:59pm on <strong>31 June 2024</strong>.
 </div>
 
+{% elif (data['fetf-status'] == "04") %}
+<!-- Claim under review -->
+
+<h3 class="govuk-heading-m">Claim under review</h3>
+<div class="govuk-inset-text">
+    RPA should complete the review by <strong>30 July 2024</strong>.
+</div>
 
 {% endif %}
