--- a/app/views/fetf/claim/v1-0/gps.html
+++ b/app/views/fetf/claim/v1-0/gps.html
@@ -29,7 +29,7 @@
       
       <span class="govuk-caption-xl">Item details</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
-        GPS light bar
+        GPS light bar (FETF46)
       </h1>
 
       <p class="govuk-body">Add details of the item you want to claim.</p>
@@ -46,7 +46,7 @@
       
         <script>
           document.getElementById('width-10').addEventListener('click', function() {
-            this.value = '4';
+            this.value = '3';
           });
         </script>
 
@@ -62,7 +62,7 @@
   <script>
     document.getElementById('make').addEventListener('focus', function() {
       if (this.value === '') {
-        this.value = 'Neversink Farm - The Subversive';
+        this.value = 'Agricision OnTrak';
       }
     });
   </script>
