--- a/app/views/fetf/claim/v1-0/paper-pot.html
+++ b/app/views/fetf/claim/v1-0/paper-pot.html
@@ -29,7 +29,7 @@
       
       <span class="govuk-caption-xl">Item details</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
-        Paper pot transplanter
+        Paper pot transplanter (FETF4)
       </h1>
 
       <p class="govuk-body">Add details of the item you want to claim.</p>
