--- a/app/views/fetf/claim/v1-0/harvest.html
+++ b/app/views/fetf/claim/v1-0/harvest.html
@@ -29,7 +29,7 @@
       
       <span class="govuk-caption-xl">Item details</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
-        Harvesting head
+        Harvesting head (FETF13)
       </h1>
 
       <p class="govuk-body">Add details of the item you want to claim.</p>
@@ -46,7 +46,7 @@
       
         <script>
           document.getElementById('width-10').addEventListener('click', function() {
-            this.value = '4';
+            this.value = '2';
           });
         </script>
 
@@ -62,7 +62,7 @@
   <script>
     document.getElementById('make').addEventListener('focus', function() {
       if (this.value === '') {
-        this.value = 'Neversink Farm - The Subversive';
+        this.value = 'Tigercat 575';
       }
     });
   </script>
@@ -145,14 +145,14 @@
 
   function showPlaceholderText(input) {
     if (input.value === '') {
-      input.value = 'ABC123';
+      input.value = 'TC-575-02382';
     }
   }
 
   function hidePlaceholderText(input) {
     // Only update the placeholder text if the input is empty
     if (input.value === '') {
-      input.value = 'ABC123';
+      input.value = 'TC-575-02382';
     }
   }
 
