--- a/app/views/fetf/claim/v1-0/salad2.html
+++ b/app/views/fetf/claim/v1-0/salad2.html
@@ -59,7 +59,7 @@
       
       <span class="govuk-caption-xl">Item details</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
-        Salad leaf harvester
+        Salad leaf harvester (FETF8)
       </h1>
 
       <p class="govuk-body">Upload evidence to support your claim for his item.</p>
