--- a/app/views/fetf/claim/v1-0/shoe2.html
+++ b/app/views/fetf/claim/v1-0/shoe2.html
@@ -59,7 +59,7 @@
       
       <span class="govuk-caption-xl">Item details</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">
-        Trailing shoe slurry system over 8m
+        Trailing shoe slurry system over 8m (FETF37)
       </h1>
 
       <p class="govuk-body">Upload evidence to support your claim for his item.</p>
