--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -58,10 +58,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=yes" aria-describedby="application-details-2-status">Paper pot transplanter</a>
+              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -69,10 +71,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=yes" aria-describedby="application-details-2-status">Paper pot transplanter</a>
+              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -80,7 +84,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=yes" aria-describedby="application-details-2-status">Paper pot transplanter</a>
+                <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -95,10 +99,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="salad?sn=yes" aria-describedby="application-details-2-status">Salad leaf harvester</a>
+              <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -106,10 +112,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="salad?sn=yes" aria-describedby="application-details-2-status">Salad leaf harvester</a>
+              <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -117,7 +125,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="salad?sn=yes" aria-describedby="application-details-2-status">Salad leaf harvester</a>
+                <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -132,10 +140,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head</a>
+              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -143,10 +153,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head</a>
+              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -154,7 +166,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head</a>
+                <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -169,10 +181,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="slurry?sn=yes" aria-describedby="application-details-2-status">Slurry separators</a>
+              <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -180,10 +194,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="slurry?sn=yes" aria-describedby="application-details-2-status">Slurry separators</a>
+              <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -191,7 +207,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="slurry?sn=yes" aria-describedby="application-details-2-status">Slurry separators</a>
+                <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -206,10 +222,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m</a>
+              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -217,10 +235,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m</a>
+              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -228,7 +248,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m</a>
+                <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -244,10 +264,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="gps?sn=yes" aria-describedby="application-details-2-status">GPS light bar</a>
+              <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              Not yet started
+              <strong class="govuk-tag govuk-tag--blue">
+                Not yet started
+              </strong>
           </div>
           </li>
 
@@ -255,10 +277,12 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="gps?sn=yes" aria-describedby="application-details-2-status">GPS light bar</a>
+              <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
-              In progress
+              <strong class="govuk-tag govuk-tag--light-blue">
+                In progress
+              </strong>
           </div>
           </li>
 
@@ -266,7 +290,7 @@
 
             <li class="govuk-task-list__item govuk-task-list__item--with-link">
               <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="gps?sn=yes" aria-describedby="application-details-2-status">GPS light bar</a>
+                <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
               </div>
               <div class="govuk-task-list__status" id="application-details-4-status">
                 Completed
@@ -274,11 +298,6 @@
             </li>
 
           {% endif %}
-
-
-
-
-
 
           </ul>
       </ol>
