--- a/app/views/fetf/claim/v1-0/slurry2.html
+++ b/app/views/fetf/claim/v1-0/slurry2.html
@@ -62,7 +62,7 @@
         Slurry separators (FETF27)
       </h1>
 
-      <p class="govuk-body">Upload evidence to support your claim for his item.</p>
+      <p class="govuk-body">Upload evidence to support your claim for this item.</p>
 
 
 
